# qt_c-_demo

./: .gitignore  CMakeLists.txt  customlistdelegate.cpp  customlistdelegate.h  customtabledelegate.cpp  customtabledelegate.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mvcdetailcomboboxdelegate.cpp  mvcdetailcomboboxdelegate.h  mvcdetailqspinboxdelegate.cpp  mvcdetailqspinboxdelegate.h  res.qrc  userinfo.cpp  userinfo.h  userinfo.ui
.workbuddy/memory/: 2026-05-03.md  MEMORY.md
